# agentic-ai-devflow

./: CLAUDE.md  LICENSE  Makefile  README.md  benchmark_report.py  docker-compose.yml  pyproject.toml  review.py
agentbench/: results.csv
app/backend/: Dockerfile  agent.py  main.py
app/backend/agentbench/: benchmark.py
app/backend/commitcraft/: diff_parser.py
app/backend/ontology/: __init__.py  loader.py  mapper.py  validator.py
app/backend/specbot/: validate.py
evals/: data-contract-evals.json  pr-reviewer-evals.json
mini_reviewer/: __init__.py  api.py  demo.py  results.md  test_client.py
ontology/: agentic-ai.owl
scripts/: run_eval.py
skills/agentbench-runner/: SKILL.md
skills/data-contract-bot/: SKILL.md
skills/ontology-validator/: SKILL.md
skills/openspec-validator/: SKILL.md
skills/pr-reviewer/: SKILL.md
spec/: data-contract.spec.yaml  pr-spec.yaml
